turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: '(' expected but identifier found.
  if a=(Color.black){
     ^LangtonsAnt:8: error: '(' expected but identifier found.
  if a=(Color.white){
     ^LangtonsAnt:13: error: illegal start of simple expression
}
^